# cwm-windows

./: .gitignore  CLAUDE.md  README.md  config.example.json  pyproject.toml  start_cwm.ps1  start_cwm.sh
cwm/: __init__.py  __main__.py  api.py  app.py  app.tcss  config.py  logging_setup.py  modals.py  models.py  oauth.py  state.py  widgets.py
tests/: test_config.py  test_models.py
