[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cwm"
version = "0.1.0"
description = "Keyboard-first ConnectWise Manage TUI client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1",
  "textual>=0.61,<1",
]

[project.scripts]
cwm = "cwm.__main__:main"

[tool.setuptools]
packages = ["cwm"]
