[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cwm"
version = "0.1.0"
description = "Keyboard-first ConnectWise Manage TUI client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27,<1",
  "platformdirs>=4,<5",
  "textual>=0.61,<1",
]

[project.scripts]
cwm = "cwm.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.23,<1"]

[tool.setuptools]
packages = ["cwm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
